test/org/midica/testfiles/failing/compact-channel-var-invalid.midica
INCLUDE inc/instruments.midica

VAR $x = test

$x: c:/4
